--- a/code/code.fsproj
+++ b/code/code.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Combinator.fs" />
     <Compile Include="AST.fs" />
     <Compile Include="Parser.fs" />
+    <Compile Include="GameEngine.fs" />
     <Compile Include="Evaluator.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
